# omnidux

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: bench.rs  mpsc_threading.rs
core/src/: lib.rs
core/src/capsule/: mod.rs
core/src/config/: mod.rs
core/src/generator/: main_template.rs.hbs  rust.rs
core/src/repo/: mod.rs
core/src/scheduler/: context.rs  mod.rs  strategy.rs
core/src/task/: mod.rs
core/src/threads/: mod.rs
core/src/ui/: example.rs
core/src/uuid/: mod.rs
core/tests/: style.rs
examples/kanbanboard/: omnidux.ios.yaml  omnidux.web.yaml
examples/kanbanboard/.omnidux/omnidux-example-kanbanboard-main-lib/: Cargo.toml
examples/kanbanboard/.omnidux/omnidux-example-kanbanboard-main-lib/src/: main.rs
examples/kanbanboard/repos/core/: main-controller.rs
macros/: Cargo.toml
macros/src/: components.rs  lib.rs  style.rs
sys/shadow-renderer/: Cargo.toml
sys/shadow-renderer/src/: lib.rs
sys/shadow-renderer/src/node/: capsule.rs  mod.rs  node.rs  shadow.rs
sys/shadow-renderer/src/style/: mod.rs
sys/shadow-renderer/tests/: lib.rs
sys/shadow-renderer/tests/node/: tree.rs
sys/shadow-renderer/tests/node/snapshots/: tree__tree_mounting.snap
