[package]
name = "omnidux_macros"
version = "0.1.0"
authors = ["Rene Eichhorn <rene.eichhorn@shopgate.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0.25.9"
proc-macro2 = "1.0.3"
proc-macro-hack = "0.5.9"
quote = "1.0.2"

[lib]
proc-macro = true
